<resources>
    <string name="app_name">NailDesignApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Регистрация</string>
    <string name="have_account">Есть аккаунт?</string>
    <string name="enter">Войти</string>
    <string name="fio">ФИО</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="Authoris">Авторизация</string>
    <string name="NoAcount">Нет аккаунта?</string>
    <string name="Email">E-mail</string>
    <string name="Forgot_Password">Забыли пароль?</string>
    <string name="btn_enter">Войти</string>
    <string name="create">Создайте!</string>

    <string name="master_mail">master@master.ru</string>
    <string name="master_uid">Te3mgZA3r4P0vigvdHVGRYrbP222</string>

    <string name="favorite">Избранное</string>
    <string name="make_record">Записаться к мастеру</string>
    <string name="gallery">Галерея дизайнов</string>
    <string name="my_designs">Мои дизайны</string>
    <string name="createDesign">Создать дизайн</string>
    <string name="gallery_design">Галерея дизайнов</string>
    <string name="set_price">Установить цену</string>
    <string name="add_picture">Добавить рисунок</string>
    <string name="record_list">Список записей</string>
    <string name="end_record">Запись окончена?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="pricing">Прайсинг</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
    <string name="manic">Маникюр</string>
    <string name="pokrit">Покрытие</string>
    <string name="design">Дизайн</string>
    <string name="constructor">Конструктор</string>
    <string name="choose_form">Выбрать форму</string>
    <string name="choose_length">Выбрать длину</string>
    <string name="close">Закрыть</string>
    <string name="form">Маникюр</string>
    <string name="no_connection">Нет интернета</string>
    <string name="designprice">designPrice</string>
    <string name="nailprice">nailPrice</string>
    <string name="coatingprice">coatingPrice</string>
    <string name="phone_number">Номер телефона</string>

    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="enter_email">Введите свой email</string>

    <string name="enter_your_nickname">Введите своё имя</string>
    <string name="enter_the_password">Введите пароль</string>
    <string name="password_must_be_6_symbols_at_least">Пароль должен содержать хотя бы 6 символов</string>
    <string name="registered_successfully">Регистрация прошла удачно</string>
    <string name="smth_went_wrong">Что-то пошло не так, проверьте качество соединения.</string>
    <string name="enter_your_phone">Введите свой номер телефона</string>

    <string name="do_you_want_to_reset_password_for">Вы хотите сменить пароль для</string>
    <string name="some_problems_went">Произошли некоторые проблемы</string>
    <string name="your_email_must_be_correct">Ваш email должен быть корректным</string>
    <string name="base_price">1000</string>
    <string name="please_set_price">Установите цену</string>
    <string name="ok">OK</string>
    <string name="do_you_want_to_delete_design">Хотите ли вы удалить дизайн?</string>
    <string name="design_will_be_deleted_forever">Дизайн будет удалён безвозвратно</string>
    <string name="form_is_not_exist">Такой формы нет, пожалуйста выберите другие параметны</string>
    <string name="enter_time">Введите дату и время</string>
    <string name="_1">Запись должна быть сделана минимум за 1 день</string>
    <string name="enter_date_format">Дата или время имеет неверный формат</string>
    <string name="_8_00_19_00">Дата или время указаны некорректно</string>
    <string name="success">Успешно!</string>
    <string name="create_record">Создать запись</string>
    <string name="color_picture">Цвет рисунка</string>
    <string name="choose_color_picture">Выберите цвет рисунка</string>
</resources>