<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white">

    <View
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/please_set_price"
        android:textColor="@color/check_attention"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_price"
        android:textColor="@color/check_attention"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgIncrease"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:rotation="180"
        android:src="@drawable/baseline_arrow_left_24"
        app:layout_constraintBottom_toBottomOf="@+id/priceTxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/priceTxtView"
        app:layout_constraintTop_toTopOf="@+id/priceTxtView" />

    <ImageView
        android:id="@+id/imgReduce"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/baseline_arrow_left_24"
        app:layout_constraintBottom_toBottomOf="@+id/priceTxtView"
        app:layout_constraintEnd_toStartOf="@+id/priceTxtView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priceTxtView" />

    <TextView
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/check_attention"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgIncrease"
        app:layout_constraintStart_toStartOf="@+id/imgIncrease"
        app:layout_constraintTop_toBottomOf="@+id/imgIncrease" />

</androidx.constraintlayout.widget.ConstraintLayout>